--- a/index.html
+++ b/index.html
@@ -176,16 +176,15 @@
 			<h2>My Projects</h2>
 		</div>
 
-
 		<div class="owl-carousel owl-theme">
 			<div class="item">
 				<div id="card">
-					<i class="fa-solid fa-calculator"></i>
-					<h5 class="projTitle">Matrix Calculator</h5>
+					<i class="fa-solid fa-gamepad"></i>
+					<h5 class="projTitle">Flappy Ninja</h5>
 					<div class="pra">
-						<p>Calculator which computes addition, subtraction, and multiplication with different order matrices specified by the user</p>
+						<p>Remake of the famous Flappy Bird game, uses of game objects with animations</p>
 					</div>
-					<h5 style="margin-bottom: 30px; font-weight: 700; color: #0ea5e9;">C++</h5>
+					<h5 style="margin-bottom: 30px; font-weight: 700; color: #0ea5e9;">C#, Unity</h5>
 					<div>
 						<a style="text-decoration: none;" href="https://github.com/MianR1">
 							<button class="btn-66 button">View More?</button>
@@ -193,7 +192,6 @@
 					</div>
 				</div>
 			</div>
-
 
 			<div class="item">
 				<div id="card">
