--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html class="hero">
 <head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KXB7CJRJNH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KXB7CJRJNH');
+</script>
+
 <title>Mian Rafay</title>
 <link rel="shortcut icon" type="x-icon" href="Images/Logo.png">
 
